# cc2630_template

./: .gitmodules  CMakeLists.txt  cc26x0f128.lds
cc26xxware_modified/linker_files/: cc26x0f128.lds
cc26xxware_modified/startup_files/: startup_gcc.c
include/: FreeRTOSConfig.h  user_tasks.h
src/: freertos_funcs.c  irq_handlers.c  main.c  power_manager.c  syscalls.c  task_hello.c  tasks_init.c
startup_files/: ccfg.c
